--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "car-rental",
   "version": "0.1.0",
+  "proxy": "http://localhost:5000",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.7.7",
+    "axios": "^1.7.8",
     "chart.js": "^4.4.6",
     "framer-motion": "^11.11.17",
     "lucide-react": "^0.460.0",
