--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.28.0",
     "react-scripts": "5.0.1",
+    "react-spring": "^9.7.4",
     "recharts": "^2.13.3",
     "tailwind-scrollbar-hide": "^1.1.7",
     "web-vitals": "^2.1.4"
