--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "car-rental",
   "version": "0.1.0",
-  "proxy": "http://localhost:5000",
+  "proxy": "https://dropx-backend.onrender.com",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
